Adding a billing API

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ provider:
   name: aws
   runtime: nodejs8.10
   stage: dev
-  region: us-east-1
+  region: us-east-2
 
   # 'iamRoleStatements' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
@@ -106,6 +106,15 @@ functions:
           method: delete
           cors: true
           authorizer: aws_iam
+
+billing:
+  handler: billing.main
+  events:
+    - http:
+        path: billing
+        method: post
+        cors: true
+        authorizer: aws_iam
 
 # Create our resources with separate CloudFormation templates
 resources:
